# algosim

./: .gitignore  Explanation.md  README.md  docker-compose.yml
api/: Dockerfile  main.py  requirements.txt
backend/: CMakeLists.txt  Dockerfile
backend/include/algosim/: MatchingEngine.h  Order.h  OrderBook.h  ZeroMQPublisher.h
backend/src/: MatchingEngine.cpp  OrderBook.cpp  ZeroMQPublisher.cpp  main.cpp
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  order-book.tsx  site-header.tsx  trade-log.tsx  trading-chart.tsx
